<resources>
    <string name="app_name">Volunteers</string>
    <string name="Login">Username/Number</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword"><u>Forgot Password?</u></string>
    <string name="ResetPassword">Reset Password</string>
    <string name="SignUp"><u>Don\'t have an account?</u></string>
    <string name="Button">Sign in</string>
    <string name="ShowPassword">ShowPassword</string>
    <string name="LoginPage">Login</string>
    <string name="NewPassword">NewPassword</string>
    <string name="ConfirmNewPassword">ConfirmPassword</string>
    <string name="Reset">Reset</string>
    <string name="changepassword">Change Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="approved">Approved</string>
    <string name="waitlisted">Unapproved</string>

    <string name="list_of_events">LIST OF EVENTS</string>


    <string name="Report">Report</string>
    <string name="ReportName">UserName/Email</string>
    <string name="reportsubmit">Submit</string>
    <string name="reportemail">Email</string>
    <string name="reportevent">Event he/she in</string>
    <string name="reportreason">Reason</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="feedback">FeedBack</string>
    <string name="feedbackname">Name</string>
    <string name="feedbackemail">Email</string>
    <string name="feedbacksubject">Subject</string>
    <string name="feedbacksuggestions">Suggestions</string>
    <string name="feedbacksubmit">Send Feedback</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
</resources>


